Fixed issue with item data not showing after adding a note and added a styled alert message to results page after successful add of note

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,5 +1,6 @@
 .container {
     padding: 1em;
+    background-color: lightblue;
 }
 
 .formfield {
@@ -22,12 +23,6 @@ table td {
 
 }
 
-.bg-image {
-    /*background-image: url(images/title_banner.jpg);*/
-    background-color: lightblue;
-    background-size: cover;
-
-}
 .jumbotron {
     margin-bottom: 0px;
     /*background-image: url(images/sky.png);*/
